--- a/langs/en.json
+++ b/langs/en.json
@@ -3,22 +3,40 @@
         "new_game": "New Game",
         "continue": "Continue",
         "settings": "Settings",
+        "credits": "Credits",
         "quit": "Quit"
     },
 
-    "act1_a": {
-        "ryan_cooper": "Ryan Cooper",
+    "loader": {
+        "downloading_assets": "Downloading Resources...",
+        "loading_data": "Initializing...",
+        "saving": "Saving Progress...",
+        "saved": "Progress Saved."
+    },
+
+    "actors_name": {
+        "jenna": "Jenna",
+        "derek": "Derek",
+        "ryan_cooper": "Ryan Cooper"
+    },
+
+
+    "act_a_phone_call_voice": {
+        "ryan_1": "Jenna… great timing to pick up, because I’m currently knee-deep in a sticky situation and could really use you right now.",
+        "jenna_1": "You’re kidding me. I’m in the middle of a recon—",
+        "ryan_2": "I know, I know—I'm sorry! Just—this vehicle I've been tracking for a while… and it's right in front of me!",
+        "jenna_2": "Yeah, yeah—send the ping. Just don’t get yourself killed before I get there."
+    },
+
+    "act_one_a": {
         "loose_ends": "Loose Ends",
         "gps_sent": "GPS Sent",
         "join_pursuit": "Join the pursuit",
         "join_pursuit_desc": "Join Ryan Cooper in the high-speed chase through the city streets."
     },
-    "act1_chase": {
+    
+    "act_one_chase": {
         "stop_car_title": "Stop the Fleeing Car",
         "stop_car_desc": "Damage the escaping vehicle to disable it."
-    },
-    "char_select": {
-        "jenna": "Jenna",
-        "derek": "Derek"
     }
 }
