--- a/langs/es.json
+++ b/langs/es.json
@@ -21,19 +21,18 @@
     },
 
 
+    "act_a_phone_call_voice": {
+        "ryan_1": "Jenna… great timing to pick up, because I’m currently knee-deep in a sticky situation and could really use you right now.",
+        "jenna_1": "You’re kidding me. I’m in the middle of a recon.",
+        "ryan_2": "I know, I know—I'm sorry! Just—this vehicle I've been tracking for a while… and it's right in front of me!",
+        "jenna_2": "Yeah, yeah—send the ping. Just don’t get yourself killed before I get there."
+    },
 
-   "act_one_a": {
+    "act_one_a": {
         "loose_ends": "Loose Ends",
         "gps_sent": "GPS Sent",
         "join_pursuit": "Join the pursuit",
         "join_pursuit_desc": "Join Ryan Cooper in the high-speed chase through the city streets."
-    },
-    
-    "act_a_phone_call_voice": {
-        "ryan_1": "Jenna… great timing to pick up, because I’m currently knee-deep in a sticky situation and could really use you right now.",
-        "jenna_1": "You’re kidding me. I’m in the middle of a recon—",
-        "ryan_2": "I know, I know—I'm sorry! Just—this vehicle I've been tracking for a while… and it's right in front of me!",
-        "jenna_2": "Yeah, yeah—send the ping. Just don’t get yourself killed before I get there."
     },
     
     "act_one_chase": {
