--- a/langs/nb.json
+++ b/langs/nb.json
@@ -17,20 +17,18 @@
     "actors_name": {
         "jenna": "Jenna",
         "derek": "Derek",
-        "ryan_cooper": "Ryan Cooper"
+        "ryan_cooper": "Anton Pærksen"
     },
 
 
     "act_a_phone_call_voice": {
         "ryan_1": "Jenna… great timing to pick up, because I’m currently knee-deep in a sticky situation and could really use you right now.",
-        "jenna_1": "You’re kidding me. I’m in the middle of a recon—",
+        "jenna_1": "You’re kidding me. I’m in the middle of a recon.",
         "ryan_2": "I know, I know—I'm sorry! Just—this vehicle I've been tracking for a while… and it's right in front of me!",
         "jenna_2": "Yeah, yeah—send the ping. Just don’t get yourself killed before I get there."
     },
 
-
     "act_one_a": {
-        "ryan_cooper": "Anton Pærksen",
         "loose_ends": "Loose Ends",
         "gps_sent": "Lokasjon er sendt",
         "join_pursuit": "Legg deg i Biljakten",
