--- a/langs/nb.json
+++ b/langs/nb.json
@@ -3,22 +3,39 @@
         "new_game": "Nytt Spill",
         "continue": "Fortsett",
         "settings": "Innstillinger",
+        "credits": "Medvirkende",
         "quit": "Avslutt"
     },
 
+    "loader.loading_data": {
+        "downloading_assets": "Venter på serveren...",
+        "loading_data": "Bare et øyeblikk...",
+        "saving": "Lagrer fremdrift...",
+        "saved": "Fremdrift lagret!"
+    },
+
+    "actors_name": {
+        "jenna": "Jenna",
+        "derek": "Derek",
+        "ryan_cooper": "Anton Pærksen"
+    },
+
+    "act_a_phone_call_voice": {
+        "ryan_1": "Jenna… god timing å plukke meg opp nå, for jeg er i en vanskelig situasjon og kunne virkelig trenge deg akkurat nå.",
+        "jenna_1": "Du tuller med meg. Jeg er midt i en rekognosering.",
+        "ryan_2": "Jeg vet, jeg vet unnskyld! Det er bare det at den bilen for meg har jeg fulgt med på en stund og den er rett foran meg nå!",
+        "jenna_2": "Ja, ja send lokasjon da. Bare ikke få deg selv drept før jeg kommer meg dit."
+    },    
+
     "act1_a": {
-        "ryan_cooper": "Anton Pærksen",
         "loose_ends": "Loose Ends",
         "gps_sent": "Lokasjon er sendt",
         "join_pursuit": "Legg deg i Biljakten",
         "join_pursuit_desc": "Bli med Anton Pærksen i den intensive biljakten gjennom byens gater."
     },
+
     "act1_chase": {
         "stop_car_title": "Stopp den flyktende bilen",
         "stop_car_desc": "Ødelegg bilen for å stoppe biljakten."
-    },
-    "char_select": {
-        "jenna": "Jenna",
-        "derek": "Derek"
     }
 }
